experimental modern fix to scrollbar layout shift problem

--- a/assets/css/converted-css.css
+++ b/assets/css/converted-css.css
@@ -137,7 +137,7 @@ a {
 
 html { 
   height: 100%; 
-  overflow-y: scroll; /* Forces scrollbar to prevent layout shift */ 
+  scrollbar-gutter: stable;
 }
 
 body {
